# Function

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindBenchmark.cmake  FindEigen.cmake  FindGflags.cmake  FindGlog.cmake  FindGtest.cmake  FindMKL.cmake  FindNNPACK.cmake  FindOpenBLAS.cmake  android.cmake  dependencies.cmake
src/: BufferArg.cpp  BufferArg.h  BufferArgTest.cpp  CMakeLists.txt  ClassRegistrar.h  ConvFunc.cpp  ConvFunc.h  ConvFuncTest.cpp  EigenMatMulFunc.cpp  Function.cpp  Function.h  FunctionBenchmark.h  FunctionTest.cpp  FunctionTest.h  Gemm.cpp  Gemm.h  GemmFunctor.h  Locks.h  MatMulBenchmark.cpp  MatMulFunc.h  MatMulFuncTest.cpp  MemoryHandle.h  NNPACKConvFunc.cpp  Stat.cpp  Stat.h  TensorShapeTest.cpp  TensorType.h  ThreadLocal.h  Util.cpp  Util.h
src/conv/: ConvOp.h  ConvOpBenchmark.h  DepthwiseConvOpBenchmark.cpp  DepthwiseConvOpTest.cpp  GemmConvOp.cpp  GemmConvOpBenchmark.cpp  GemmConvOpTest.cpp  Im2Col.h  Im2ColOp.cpp  NNPACKConvOp.cpp  NNPACKConvOpBenchmark.cpp  NNPACKConvOpTest.cpp  NeonDepthwiseConv.cpp  NeonDepthwiseConvTranspose.cpp  README.md  neon_util.h
src/matmul/: BlasMatMulFunc.cpp  MatMulBenchmark.cpp  MatMulFuncTest.cpp  README.md
